--- a/index.html
+++ b/index.html
@@ -5,31 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     </head>
+
     <body>
-        <div>
-          <div class="blue">
-            <div class="box">
-              <div class="header">Header Logo</div>
-              <div class="nav">
-                <ul>
-                  <li><a href="default.asp">Home</a></li>
-                  <li><a href="news.asp">News</a></li>
-                  <li><a href="contact.asp">Contact</a></li>
-                  <li><a href="about.asp">About</a></li>
-                </ul>
-              </div>
-              <div>
-                <h1 style="width: 450px;">This website is<br>awesome</h1>
-                <p style="width: 450px;">This website has some subtext that goes here under the
-                  <br>main title. It's a smaller font and color is lower
-                  <br>contrast.
-                </p>
-                <div class="button">
-                <a href="http://www.google.com" target="_blank"><button>Sign up</button></a>
-              </div>
-              <div>
-              </div>
-            </div>
-          </div>
+      <div class="blue">
+        <div class="box">
+        <nav class="navigation">
+           <img class="logo" src="./images/logo.svg">
+           <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Get in Touch</a></li>
+        </ul>
+        <div class="text">
+            <h1>This website is awesome</h1>
+            <p>his website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast.</p>
+        <div class="button">
+            <a href="https://www.google.com" target="_blank">Sign up</a>
         </div>
-      </body>
+        </div>
+        <div class="container">
+          <div class="image">
+              <img src="./images/image.png">
+    </nav>
+      </div>
