--- a/index.html
+++ b/index.html
@@ -30,3 +30,25 @@
               <img src="./images/image.png">
     </nav>
       </div>
+      <div class="white">
+        <div class="box">
+          <div class="header">
+            <h3>Some random information.</h3>
+          </div>
+            <div class="pictures">
+              <div class="img-container">
+                <img src="./images/food 1.png" alt="cherry" style="width:100%">
+                <p>this is some subtext under an illustration or image</p>
+              </div>
+              <div class="img-container">
+                <img src="./images/food 2.png" alt="mellon" style="width:100%">
+                <p>this is some subtext under an illustration or image</p>
+              </div>
+              <div class="img-container">
+                <img src="./images/food 3.png" alt="orange" style="width:100%">
+                <p>this is some subtext under an illustration or image</p>
+              </div>
+              <div class="img-container">
+                <img src="./images/food 4.png" alt="grapes" style="width:100%">
+                <p>this is some subtext under an illustration or image</p>
+              </div>
