--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               <img src="./images/image.png">
     </nav>
       </div>
+      </div>
       <div class="white">
         <div class="box">
           <div class="header">
