--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <div class="blue">
         <div class="box">
         <nav class="navigation">
-           <img class="logo" src="./images/logo.svg">
-           <ul>
+          <img class="logo" src="./images/logo.svg">
+          <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Get in Touch</a></li>
-        </ul>
+          </ul>
         <div class="text">
             <h1>This website is awesome</h1>
             <p>his website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast.</p>
@@ -28,16 +28,16 @@
         <div class="container">
           <div class="image">
               <img src="./images/image.png">
-    </nav>
+        </nav>
+        </div>
       </div>
-      </div>
-      <div class="white">
-        <div class="box">
-          <div class="header">
+        <div class="white">
+          <div class="box">
+            <div class="header">
             <h3>Some random information.</h3>
           </div>
             <div class="pictures">
-              <div class="img-container">
+            <div class="img-container">
                 <img src="./images/food 1.png" alt="cherry" style="width:100%">
                 <p>this is some subtext under an illustration or image</p>
               </div>
@@ -53,3 +53,11 @@
                 <img src="./images/food 4.png" alt="grapes" style="width:100%">
                 <p>this is some subtext under an illustration or image</p>
               </div>
+        </div>
+        </div>
+        </div>
+        <div class="grey">
+          <div class="box">
+            <div class="quote">
+            <h3>"I always entertain the notion that I'm wrong, or that I'll have to revise my opinion. Most of the time that feels good; sometimes it really hurts and is embarrassing."</h3>
+            <p>Anthony Bourdain</p>
