--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <link rel="stylesheet" href="./style.css">
     </head>
 
+
     <body>
+      <div class="navigation">
+        <div class="box">
+        <img class="logo" src="./images/logo.svg">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Get in Touch</a></li>
+        </ul>
+        </div>
+      </div>
       <div class="blue">
         <div class="box">
-        <nav class="navigation">
-          <img class="logo" src="./images/logo.svg">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Get in Touch</a></li>
-          </ul>
         <div class="text">
             <h1>This website is awesome</h1>
             <p>his website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast.</p>
@@ -28,8 +32,9 @@
         <div class="container">
           <div class="image">
               <img src="./images/image.png">
-        </nav>
+          </div>
         </div>
+      </div>
       </div>
         <div class="white">
           <div class="box">
@@ -61,3 +66,25 @@
             <div class="quote">
             <h3>"I always entertain the notion that I'm wrong, or that I'll have to revise my opinion. Most of the time that feels good; sometimes it really hurts and is embarrassing."</h3>
             <p>Anthony Bourdain</p>
+        </div>
+        </div>
+        </div>
+        <div class="white">
+          <div class="box">
+            <div class="action">
+              <h3>Call to action! It's time!</h3>
+              <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="button">
+              <a href="https://www.google.com" target="_blank">Sign up</a>
+            </div>
+            </div>
+          </div>
+          </div>
+          <div class="footer">
+            <div class="box">
+              <div class="footer-text">
+                <p>Copyright &copy; Ivo Sousa Martins</p>
+              </div>
+              </div>
+          </div>
+              
