--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Valhalla</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1624262198237-4c72e22292fc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" />
+    <meta property="og:image" content="https://ivosousamartins.github.io/Valhalla/images/image2.png" />
     <link rel="stylesheet" href="./style.css">
     </head>
 
